# selsckoGramCC

./: .gitignore  CMakeLists.txt  README.md  client  client.cc  client.cpp  logs.h  main.cpp
net/auth/: auth_proccessing.cpp  auth_proccessing.h
net/encry/: encry.cpp  encry.h
net/proto/: proto.cc  proto.cpp  proto.h
selsck_test_client/: CMakeLists.txt  main.cpp
server/: server.cc  server.cpp  server.h
server/data/db/: db_proccessing.cc  db_proccessing.h
session/: session.cc  session.cpp  session.h
